@@ -452,25 +452,25 @@ public class HashSvcSchedImpl
     private Map makeRow(HashTask task, boolean done, int qpos) {
       Map row = new HashMap();
       row.put("sort",
-	      new Long((done ? -task.getFinishDate().getTime() :
+	      Long.valueOf((done ? -task.getFinishDate().getTime() :
 			task.getLatestFinish().getExpiration().getTime())));
-      row.put("sort2", new Long(task.hashReqSeq));
-      row.put("sched", new Integer(task.hashReqSeq));
+      row.put("sort2", Long.valueOf(task.hashReqSeq));
+      row.put("sched", Integer.valueOf(task.hashReqSeq));
       row.put("state", task.getState(done));
       row.put("au", task.urlset.getArchivalUnit().getName());
       row.put("cus", task.urlset.getSpec());
       row.put("type", task.typeString());
       row.put("deadline", task.getLatestFinish());
-      row.put("estimate", new Long(task.getOrigEst()));
+      row.put("estimate", Long.valueOf(task.getOrigEst()));
       long timeUsed = task.getTimeUsed();
-      Object used = new Long(timeUsed);
+      Object used = Long.valueOf(timeUsed);
       if (task.hasOverrun()) {
 	StatusTable.DisplayedValue val = new StatusTable.DisplayedValue(used);
 	val.setColor("red");
 	used = val;
       }
       row.put("timeused", used);
-      row.put("bytesHashed", new Long(task.bytesHashed));
+      row.put("bytesHashed", Long.valueOf(task.bytesHashed));
       if (timeUsed > 0 && task.bytesHashed > 0) {
 	row.put("rate", hashRate(BigInteger.valueOf(task.bytesHashed),
 				 timeUsed));
@@ -485,7 +485,7 @@ public class HashSvcSchedImpl
 					  totalBytesHashed));
       res.add(new StatusTable.SummaryInfo("Total hash time",
 					  ColumnDescriptor.TYPE_TIME_INTERVAL,
-					  new Long(totalTime)));
+					  Long.valueOf(totalTime)));
       if (totalTime != 0) {
 	res.add(new StatusTable.SummaryInfo("Bytes/ms",
 					    ColumnDescriptor.TYPE_STRING,
