@@ -61,8 +61,8 @@ public class TestVariableTimedMap extends LockssTestCase {
     super.tearDown();
   }
 
-  Object keys[] = { new Integer(3),"foo",new Double(4.0), new Float(4.3) };
-  Object values[] = { "three","bar",new Integer(4), new Boolean(true) };
+  Object keys[] = { Integer.valueOf(3),"foo",Double.valueOf(4.0), 4.3F };
+  Object values[] = { "three","bar",Integer.valueOf(4), Boolean.valueOf(true) };
   int timeouts[] = { 10000, 20000, 30000, 40000 };
 
 
@@ -118,14 +118,14 @@ public class TestVariableTimedMap extends LockssTestCase {
     VariableTimedMap map = makeGeneric();
     Map t = new HashMap();
     t.put("hack","burn");
-    t.put(new Integer(18),"eighteen");
-    Integer eight = new Integer(8);
-    t.put(new Float(8.8),eight);
+    t.put(Integer.valueOf(18),"eighteen");
+    Integer eight = Integer.valueOf(8);
+    t.put(8.8F,eight);
     map.putAll(t, 1000);
     t = null;
     assertEquals("burn", map.get("hack"));
     assertEquals(keys.length+3, map.size());
-    assertSame(eight, map.get(new Float(8.8)));
+    assertSame(eight, map.get(8.8F));
   }
 
   public void testOverwrite() {
